fix z-index of code block

--- a/styles/prism-theme.css
+++ b/styles/prism-theme.css
@@ -126,7 +126,7 @@ pre[data-line] {
 }
 pre[class*="language-"] > code[class*="language-"] {
   position: relative;
-  z-index: 1;
+  z-index: 0;
 }
 .line-highlight {
   position: absolute;
